--- a/trunk/sim/plugins/_core/styles/Makefile.am
+++ b/trunk/sim/plugins/_core/styles/Makefile.am
@@ -5,6 +5,7 @@ dist_styles_DATA = \
  SIM.4.(2+3).xsl \
  SIM.5.xsl \
  SIM.5.2.xsl \
+ SIM.5.2.2.xsl \
  XChat.xsl \
  XChat2seconds.xsl \
  XChat3fullDate.xsl \
