--- a/branches/0.9.4/Makefile.am
+++ b/branches/0.9.4/Makefile.am
@@ -3,7 +3,7 @@
 COMPILE_FIRST = sim plugins/_core
 
 EXTRA_DIST = admin AUTHORS COPYING ChangeLog INSTALL README TODO icq.ico resource.h configure.in.in \
-	     AUTHORS.sim README.SVN TODO.MingW install_win32 sim/win32 xpstyle
+	     AUTHORS.sim README.SVN TODO.MingW install_win32 sim/win32 xpstyle debian
 
 SUBDIRS = $(TOPSUBDIRS)
 DIST_SUBDIRS = $(SUBDIRS) \
