--- a/trunk/sim/plugins/remote/simremote.vcproj
+++ b/trunk/sim/plugins/remote/simremote.vcproj
@@ -75,7 +75,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="odbc32.lib odbccp32.lib"
-				OutputFile=".\../../Release/simremote.dll"
+				OutputFile=".\..\..\Release\simremote.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\simremote.def"
