--- a/trunk/sim/configure.in.in
+++ b/trunk/sim/configure.in.in
@@ -42,7 +42,6 @@ AC_TYPE_UID_T
 AC_STRUCT_TM
 AC_PATH_X
 AC_HEADER_SYS_WAIT
-AC_TM_GMTOFF
 AC_FUNC_FORK
 AC_C_INLINE
 AC_C_CONST
@@ -57,6 +56,17 @@ AC_FUNC_REALLOC
 AC_FUNC_STAT
 
 AC_LIB_LTDL
+
+AC_CACHE_CHECK(for tm_gmtoff in struct tm, ac_cv_struct_tm_gmtoff,
+  AC_TRY_COMPILE([
+    #include <time.h>
+  ], [
+    struct tm tm;
+    tm.tm_gmtoff = 1;
+  ], ac_cv_struct_tm_gmtoff=yes, ac_cv_struct_tm_gmtoff=no))
+if test $ac_cv_struct_tm_gmtoff = yes; then
+  AC_DEFINE(HAVE_TM_GMTOFF, 1, [Define if you have a tm_gmtoff member in struct tm])
+fi
 
 AC_CHECK_HEADERS([arpa/inet.h netinet/in.h sys/ioctl.h sys/socket.h])
 AC_CHECK_HEADERS([fcntl.h limits.h netdb.h stddef.h termios.h])
