--- a/trunk/sim/plugins/icq/icq.vcproj
+++ b/trunk/sim/plugins/icq/icq.vcproj
@@ -54,6 +54,7 @@
 				PreprocessorDefinitions="USE_OPENSSL;WIN32;_WINDOWS;QT_DLL;UNICODE;QT_THREAD_SUPPORT;VERSION=\&quot;0.9.4\&quot;;PACKAGE=\&quot;SIM\&quot;;USE_QT=1;CVS_BUILD=1"
 				StringPooling="true"
 				RuntimeLibrary="2"
+				BufferSecurityCheck="true"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="icq_pch.h"
