--- a/trunk/sim/plugins/_core/_core.vcproj
+++ b/trunk/sim/plugins/_core/_core.vcproj
@@ -6330,7 +6330,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6340,7 +6340,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6354,7 +6354,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6364,7 +6364,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6378,7 +6378,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6388,7 +6388,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6402,7 +6402,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6412,7 +6412,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6426,7 +6426,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6436,7 +6436,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6450,7 +6450,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6460,7 +6460,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6474,7 +6474,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6484,7 +6484,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6498,7 +6498,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6508,7 +6508,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6522,7 +6522,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6532,7 +6532,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6546,7 +6546,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6556,7 +6556,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6570,7 +6570,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6580,7 +6580,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6593,7 +6593,7 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6602,7 +6602,7 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6616,7 +6616,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6626,7 +6626,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6640,7 +6640,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6650,7 +6650,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6664,7 +6664,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6674,7 +6674,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6688,7 +6688,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6698,7 +6698,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6712,7 +6712,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6722,7 +6722,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6736,7 +6736,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
@@ -6746,7 +6746,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Copy $(InputPath)"
-						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
+						CommandLine="copy /Y &quot;$(InputPath)&quot; &quot;$(OutDir)\$(ParentName)\$(InputFileName)&quot;&#x0D;&#x0A;"
 						Outputs="$(OutDir)\$(ProjectName)\$(ParentName)\$(InputFileName)"
 					/>
 				</FileConfiguration>
